--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary">
+    android:background="@drawable/background_gradient">
 
     <fragment
         android:id="@+id/navigation_fragment"
@@ -17,7 +17,7 @@
         app:navGraph="@navigation/finance_navigation" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:background="@color/colorPrimary"
+        android:background="@color/colorSpinnerBackground"
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
