--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -3,11 +3,11 @@
     <item
         android:id="@+id/course_fragment"
         android:enabled="true"
-        android:icon="@drawable/ic_launcher_foreground"
+        android:icon="@drawable/btc"
         android:title="@string/course_page_title" />
     <item
         android:id="@+id/calculate_fragment"
         android:enabled="true"
-        android:icon="@drawable/ic_launcher_foreground"
+        android:icon="@drawable/etc"
         android:title="@string/calculate_page_title"/>
 </menu>
