--- a/app/src/main/res/layout/course_fragment.xml
+++ b/app/src/main/res/layout/course_fragment.xml
@@ -6,41 +6,41 @@
     android:background="@drawable/background_gradient"
     android:orientation="vertical">
 
-   <LinearLayout
-       android:id="@+id/linearLayout"
-       android:layout_margin="8dp"
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content"
-       app:layout_constraintTop_toTopOf="parent">
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        app:layout_constraintTop_toTopOf="parent">
 
-      <androidx.appcompat.widget.AppCompatSpinner
-          android:layout_weight="1"
-          android:background="@drawable/spinner_outline"
-          android:id="@+id/firstCurrencyView"
-          android:layout_width="0dp"
-          android:layout_height="54dp"
-          android:layout_margin="8dp"
-          app:layout_constraintStart_toStartOf="parent"
-          app:layout_constraintTop_toTopOf="parent" />
+        <androidx.appcompat.widget.AppCompatSpinner
+            android:id="@+id/firstCurrencyView"
+            android:layout_width="0dp"
+            android:layout_height="54dp"
+            android:layout_margin="8dp"
+            android:layout_weight="1"
+            android:background="@drawable/spinner_outline"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-      <androidx.appcompat.widget.AppCompatSpinner
-          android:layout_weight="1"
-          android:background="@drawable/spinner_outline"
-          android:id="@+id/secondCurrency"
-          android:layout_width="0dp"
-          android:layout_height="54dp"
-          android:layout_margin="8dp"
-          app:layout_constraintEnd_toEndOf="parent"
-          app:layout_constraintTop_toTopOf="parent" />
-   </LinearLayout>
+        <androidx.appcompat.widget.AppCompatSpinner
+            android:id="@+id/secondCurrency"
+            android:layout_width="0dp"
+            android:layout_height="54dp"
+            android:layout_margin="8dp"
+            android:layout_weight="1"
+            android:background="@drawable/spinner_outline"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </LinearLayout>
 
-   <androidx.recyclerview.widget.RecyclerView
-       android:id="@+id/course_list"
-       android:layout_width="match_parent"
-       android:layout_height="0dp"
-       app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-       app:layout_constraintEnd_toEndOf="parent"
-       app:layout_constraintStart_toStartOf="parent"
-       app:layout_constraintTop_toBottomOf="@+id/linearLayout"
-       app:layout_constraintBottom_toBottomOf="parent"/>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/course_list"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 </androidx.constraintlayout.widget.ConstraintLayout>
