--- a/app/src/main/res/layout/spinner_item.xml
+++ b/app/src/main/res/layout/spinner_item.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.AppCompatTextView
-    android:textAlignment="inherit"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.AppCompatTextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@android:id/text1"
-    android:singleLine="true"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:ellipsize="marquee"
     android:padding="16dp"
-    android:ellipsize="marquee" />
+    android:singleLine="true"
+    android:textAlignment="inherit" />
