--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,5 +10,7 @@
     <color name="colorBorderDark">#3C008C</color>
     <color name="colorBuy">#7CB342</color>
     <color name="colorSell">#ff5252</color>
+    <color name="colorError">#ff5252</color>
+    <color name="colorInfo">#FFEE52</color>
     <color name="colorBackgroundFavorite">#654C21</color>
 </resources>
