Favorites tab added.

--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -1,10 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
+        android:id="@+id/favorite_course_fragment"
+        android:enabled="true"
+        android:icon="@drawable/ic_exchange"
+        android:title="@string/favorite_course_page_title" />
+
+    <item
         android:id="@+id/course_fragment"
         android:enabled="true"
         android:icon="@drawable/ic_exchange"
         android:title="@string/course_page_title" />
+
     <item
         android:id="@+id/calculate_fragment"
         android:enabled="true"
