--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -3,7 +3,7 @@
     <item
         android:id="@+id/favorite_course_fragment"
         android:enabled="true"
-        android:icon="@drawable/ic_exchange"
+        android:icon="@drawable/ic_favorite"
         android:title="@string/favorite_course_page_title" />
 
     <item
